--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,72 @@
 
 
-
-{{1+2}}
-{{1+2}}
-
-
-<div *ngFor="let food of foods">
-  {{food | json}}
+<div class="filters">
+  Filters: 
+  <button (click)="filterRestaurants(499)">More than 499</button>
+  <button (click)="filterRestaurants(299)">More than 299</button>
+  <button (click)="filterRestaurants(0)">Clear Filters</button>
 </div>
+
+<ng-container *ngFor="let restaurant of restaurants">
+
+  <div style="margin: 2rem;" class="restaurant" (click)="selectRestaurant1(restaurant)">
+    <div (click)="selectRestaurant($event, restaurant)">{{restaurant.name}}</div>
+    <div>Cost for two: {{restaurant.costForTwo}}</div>
+  </div>
+
+</ng-container>
+
+
+<div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        Accordion Item #1
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        Accordion Item #2
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- https://getbootstrap.com/docs/5.3/ -->
+<!-- 1. create a list of restaurants taking restaurant type as veg or nonveg. add a veg and nonveg filter in the UI and filter out the restaurants as per that. -->
+<!-- <hr> -->
+
+
+<!-- <ng-container *ngFor="let restaurant of restaurants">
+  <p>{{restaurant | json}}</p>
+  <div *ngIf="restaurant.costForTwo >= 500" style="margin: 2rem;" class="restaurant">
+    <div>{{restaurant.name}}</div>
+    <div>Cost for two: {{restaurant.costForTwo}}</div>
+  </div>
+
+</ng-container> -->
