Added footer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,7 @@
   <app-restaurant [restaurant]="item" (chooseRestaurant)="showRestaurant($event)"></app-restaurant>
 
 </ng-container>
+<app-footer></app-footer>
 
 <!-- 1. Add child components for filters -->
 
