--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,6 +25,6 @@
 <app-footer></app-footer> -->
 
 
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 
 <router-outlet></router-outlet>
