login form and login api call

--- a/src/app/pre-auth/sign-up/sign-up.component.html
+++ b/src/app/pre-auth/sign-up/sign-up.component.html
@@ -1,1 +1,2 @@
 <p>sign-up works!</p>
+ <!-- create a signup form with inputs like name email password and city(dropdown) and add validation for all the fields. submit the form and show the data in the UI. and reset the form. -->
