--- a/src/app/pre-auth/sign-up/sign-up.component.html
+++ b/src/app/pre-auth/sign-up/sign-up.component.html
@@ -3,46 +3,37 @@
  <div class="container">
     <div class="card signin-card">
         <div class="card-body">
-            <form [formGroup]="signinForm" (ngSubmit)="onSubmit(signinForm)">
+            <form [formGroup]="signUpForm" (ngSubmit)="onSubmit(signUpForm)">
                 <div class="mb-3">
                     <label for="emailInput" class="form-label">Email address</label>
                     <input type="text" class="form-control" id="emailInput" formControlName="username">
-                    <div id="emailHelp" class="form-text" *ngIf="signinForm.get('username')?.invalid && loginSubmitted">Please enter a valid email</div>
+                    <div class="form-text" *ngIf="signUpForm.get('username')?.invalid && loginSubmitted">Please enter a valid email</div>
                 </div>
                 <div class="mb-3">
                     <label for="passwordInput" class="form-label">Password</label>
                     <input type="password" class="form-control" id="passwordInput" formControlName="password">
-                    <div id="emailHelp" class="form-text" *ngIf="signinForm.get('password')?.invalid && loginSubmitted">Please enter a valid password</div>
+                    <div class="form-text" *ngIf="signUpForm.get('password')?.invalid && loginSubmitted">Please enter a valid password</div>
                 </div>
-                <!-- <div class="btn-group">
-                    <button type="button"  class="btn btn-danger">City</button>
-                    <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                      <span class="visually-hidden">Toggle Dropdown</span>
-                    </button>
-                    <ul  class="dropdown-menu">
-                        
-                        <li *ngFor="let city of Cities" class="dropdown-item" type="button" [value]="city" formControlName="city"><button>{{city}}</button></li>
-                        
-                    </ul>
-                  </div> -->
-                  <div>
-                    <select (change)="update($event)" class="form-control" >
-                        <option value="default">City</option>
-                        <option *ngFor="let city of Cities" [value]="city">
+
+                <div class="mb-3">
+                    <label class="form-label">City</label>
+                    <select class="form-control" formControlName="city">
+                        <option *ngFor="let city of cities" [value]="city">
                             {{city}}
                         </option>
                     </select>
+                    <div class="form-text" *ngIf="signUpForm.get('city')?.invalid && loginSubmitted">Please select a valid city</div>
+                </div>
 
-                  </div>
-                  <div class="signin-btn" >
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
+                <div class="signin-btn" >
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
             </form>
         </div>
     </div>
 </div>
 <div *ngIf="loginSubmitted">
-<div><span> Email : {{userName}}</span></div>
-<div><span> Password : {{passWord}}</span></div>
-<div><span> city : {{city}}</span></div>
+    <div><span> Email : {{this.signUpForm.value.username}}</span></div>
+    <div><span> Password : {{this.signUpForm.value.password}}</span></div>
+    <div><span> city : {{this.signUpForm.value.city}}</span></div>
 </div>
