--- a/src/app/auth-independent/home/home.component.html
+++ b/src/app/auth-independent/home/home.component.html
@@ -1,17 +1,23 @@
-
-<!-- {{userInfo | json}} -->
-<div *ngIf="userInfo">
-    <div>Logged In User: <b>{{userInfo.firstName}} {{userInfo.lastName}}</b></div>
-    <button (click)="logout()">Logout</button>
-    <br>
-    <br>
-    <br>
-    <br>
-</div>
-<div *ngIf="!userInfo">
-    <button (click)="login()">Login</button>
-</div>
-
-<div *ngFor="let product of productList">
-    <a routerLink="product/{{product.id}}">{{product.name}}</a>
+<div class="container text-center">
+    <div class="row align-items-start">
+        <div class="col product-card" *ngFor="let product of products">
+            <div class="card" style="width: 18rem;">
+                <div [ngStyle]="{background: 'url(' + product.images[0] + ')', height: '10rem', 'background-size': 'cover'}"></div>
+                <div class="card-body">
+                  <h5 class="card-title product-link"><a routerLink="product/{{product.id}}">{{product.title}}</a></h5>
+                  <p class="card-text">{{product.description}}</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        <span class="original-price-cut">${{product.price + product.discountPercentage}}</span>
+                        ${{product.price}}
+                    </li>
+                </ul>
+                <!-- <div class="card-body">
+                  <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a>
+                </div> -->
+              </div>
+        </div>
+    </div>
 </div>
