--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,14 +1,37 @@
-<nav class="navbar navbar-dark bg-dark">
-    <!-- <a *ngIf="restaurant" class="navbar-brand" href="#">{{restaurant.name}}</a> -->
 
-    <div>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-            <a class="nav-link" routerLink="login">Login</a>
-            <a class="nav-link" routerLink="dashboard">Dashboard</a>
-            </li>
+<nav class="navbar navbar-expand-lg navbar-style">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Tasteride</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarScroll">
+        <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+          <!-- <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li> -->
+          <li class="nav-item" *ngIf="!userInfo">
+            <a class="nav-link" href="javascript:void(0)" (click)="login()">Login</a>
+          </li>
+          <li class="nav-item dropdown" *ngIf="userInfo">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {{userInfo.firstName}} {{userInfo.lastName}}
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="javascript:void(0)" (click)="logout()">Logout</a></li>
+              <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+            </ul>
+          </li>
+          <!-- <li class="nav-item">
+            <a class="nav-link disabled">Link</a>
+          </li> -->
         </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
 </nav>
-
-<!-- {{selectedRestaurant | json}} -->
