--- a/src/app/auth-independent/product-detail/product-detail.component.html
+++ b/src/app/auth-independent/product-detail/product-detail.component.html
@@ -1,1 +1,17 @@
-<p>product-detail works!</p>
+<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" *ngIf="product">
+    <div class="carousel-inner">
+      <div class="carousel-item" [ngClass]="{'active': i===0}" *ngFor="let image of product?.images; let i = index">
+        <img [src]="image" class="d-block w-100">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+</div>
+
+<!-- Show all the product details here from the product array -->
