Produch Search Filter

--- a/src/app/auth-independent/search/search.component.html
+++ b/src/app/auth-independent/search/search.component.html
@@ -3,6 +3,37 @@
     <!-- dropdown > 1 - 5 > apply button -->
     <!-- min - max  -->
     <!-- reset button -->
+    <div class="text-end">
+      <label>Rating</label>
+      <!-- <select  [(ngModel)]="products" (ngModelChange)="valueSelected($event)"> -->
+        <select #rating type="number" [(ngModel)]="ratin">
+      <option [value]=0>Select</option>
+      <option [value]=4.5>4.5</option>
+      <option [value]=5>5</option>
+      </select>
+      <label>MinPrice</label>
+        <input type="number" 
+          maxlength="3" 
+          min="0" 
+          max="100" 
+          required 
+          mdInput
+          #min  
+          [(ngModel)]="minPrice" 
+          name="minRateInput">
+      <label>MaxPrice</label>
+        <input type="number" 
+            maxlength="3" 
+            min="0" 
+            max="100" 
+            required 
+            mdInput 
+            #max
+            [(ngModel)]="maxPrice" 
+            name="maxRateInput">
+
+      <button class="btn btn-outline-success" type="button"  (click)="valueSelected({rate:rating.value, min: min.value, max: max.value});rating.value=''; min.value=''; max.value=''">Apply</button>
+   </div>
     <h2>Total Products: {{products.length}}</h2>
     <div class="row align-items-start">
         <div class="col product-card" *ngFor="let product of products">
@@ -16,6 +47,7 @@
                     <li class="list-group-item">
                         <span class="original-price-cut">${{product.price + product.discountPercentage}}</span>
                         ${{product.price}}
+                        ({{product.rating}}*)
                     </li>
                 </ul>
                 <!-- <div class="card-body">
