--- a/src/app/auth-independent/product-detail/product-detail.component.html
+++ b/src/app/auth-independent/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel" *ngIf="product">
+<div id="carouselExampleAutoplaying" class="carousel slide pdwidth" data-bs-ride="carousel" *ngIf="product">
     <div class="carousel-inner">
       <div class="carousel-item" [ngClass]="{'active': i===0}" *ngFor="let image of product?.images; let i = index">
         <img [src]="image" class="d-block w-100">
@@ -14,9 +14,33 @@
     </button>
 </div>
 
-<!-- Show all the product details here from the product array -->
 
-<ngx-datatable
+<!-- Show all the product details here from the product array -->
+<div>
+    <span> Product Name : {{product?.title}}</span>
+</div>
+<div>
+    <span> Category : {{product?.category}}</span>
+</div>
+<div>
+    <span> Brand : {{product?.brand}}</span>
+</div>
+<div>
+    <span>Description : {{product?.description}}</span>
+</div>
+<div>
+    <span>Price : {{product?.price}}</span>
+</div>
+<div>
+    <span>Discount Percentage : {{product?.discountPercentage}}</span>
+</div>
+<div>
+    <span>Rating : {{product?.rating}}</span>
+</div>
+<div>
+    <span>Stock : {{product?.stock}}</span>
+</div>
+<!-- <ngx-datatable
     class="material"
     [rows]="rows"
     [columns]="[{ name: 'Name' }, { name: 'Gender' }, { name: 'Company' }]"
@@ -26,4 +50,4 @@
     rowHeight="auto"
     [limit]="10"
       >
-</ngx-datatable>
+</ngx-datatable> -->
