add to cart initialize

--- a/src/app/auth-independent/product-detail/product-detail.component.html
+++ b/src/app/auth-independent/product-detail/product-detail.component.html
@@ -40,6 +40,8 @@
 <div>
     <span>Stock : {{product?.stock}}</span>
 </div>
+
+<button type="button" class="btn btn-outline-success" (click)="addToCart()">Add to cart</button>
 <!-- <ngx-datatable
     class="material"
     [rows]="rows"
