--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -27,6 +27,10 @@
           <!-- <li class="nav-item">
             <a class="nav-link disabled">Link</a>
           </li> -->
+          <li class="nav-item" *ngIf="cartLength > 0" (click)="goToCart()">
+            <p>cart</p>
+            <span class='badge badge-warning' id='lblCartCount'>{{cartLength}}</span>
+          </li>
         </ul>
         <!-- <form class="d-flex" role="search"> -->
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="keyword">
