--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -27,10 +27,17 @@
           <!-- <li class="nav-item">
             <a class="nav-link disabled">Link</a>
           </li> -->
-          <li class="nav-item" *ngIf="cartLength > 0" (click)="goToCart()">
+          <li class="nav-item" (click)="goToCart()">
+            <a class="nav-link" href="javascript:void(0)">
+              <button type="button" class="btn btn-primary">
+                <span class="badge badge-light">{{cartLength}}</span>
+              </button>
+            </a>
+          </li>
+          <!-- <li class="nav-item" *ngIf="cartLength > 0" (click)="goToCart()">
             <p>cart</p>
             <span class='badge badge-warning' id='lblCartCount'>{{cartLength}}</span>
-          </li>
+          </li> -->
         </ul>
         <!-- <form class="d-flex" role="search"> -->
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="keyword">
