--- a/src/app/post-auth/cart/cart.component.html
+++ b/src/app/post-auth/cart/cart.component.html
@@ -28,6 +28,11 @@
               </div>
               
         </div>
+        <br>
+        <br>
+        <div *ngIf="cart.length !== 0"><button class="btn btn-outline-success" type="button" (click)="addAddress()">Proceed to add address</button></div>
+        <br>
+        <br>
         <div *ngIf="cart.length === 0">Your cart is empty. Try adding some products</div>
     </div>
 </div>
