Edit functionality added

--- a/src/app/post-auth/address/address.component.html
+++ b/src/app/post-auth/address/address.component.html
@@ -13,5 +13,8 @@
       <h6 class="card-subtitle mb-2 text-body-secondary">PostalCode : {{item.postalCode}}</h6>
       <a href="javascript:void(0);" (click)="deleteAddress(item.id)" class="card-link">Delete</a>
       <a href="javascript:void(0);" (click)="selectAddress(item.id)" class="card-link">Select</a>
+      <a href="javascript:void(0);" (click)="editAddress(item.id)" class="card-link">Edit</a>
+      
+      
     </div>
 </div>
