--- a/src/app/post-auth/address-detail/address-detail.component.html
+++ b/src/app/post-auth/address-detail/address-detail.component.html
@@ -1,4 +1,5 @@
 <div>
+    <div [ngStyle]="{'background': addressId ? 'red' : 'green'}">Attribute Directive</div>
     <form [formGroup]="addressForm" (ngSubmit)="onSubmit(addressForm)">
       <div class="mb-3">
       <label>Street:</label>
